--- a/reactGame/package.json
+++ b/reactGame/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "css-loader": "^0.28.11",
+    "lodash": "^4.17.10",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
